--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=fruit-salad-rest-api
 
 # Database parameters
-spring.datasource.url=${DB_URL:jdbc:postgresql://fruit-salad-postgres:5432/fruit_salad_db}
-spring.datasource.username=${DB_USERNAME:postgres}
-spring.datasource.password=${DB_PASSWORD:postgres}
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
@@ -17,4 +17,4 @@ logging.logback.rollingpolicy.max-history=10
 logging.pattern.console=%clr(%d{dd.MM.yyyy HH:mm:ss}){faint} %clr([%thread]){cyan} %clr(%-5level){yellow} %clr(%logger{36}){magenta} - %clr(%msg){green}%n
 
 
-external.api.url=https://www.fruityvice.com
+external.fruitapi.url=https://www.fruityvice.com
